# CppDB

./: CMakeLists.txt  CommandHandler.cpp  CommandHandler.h  ConditionParser.cpp  ConditionParser.h  Entity.cpp  Entity.h  ICommandHandler.h  ICondition.h  IConditionParser.h  Logger.cpp  Logger.h  Repository.cpp  Repository.h  main.cpp
Conditions/: ComposedCondition.cpp  ComposedCondition.h  ConditionParser.cpp  ConditionParser.h  ConjunctionCondition.cpp  ConjunctionCondition.h  DisjunctionCondition.cpp  DisjunctionCondition.h  ICondition.h  KeyEqualsCondition.cpp  KeyEqualsCondition.h  NameEqualsCondition.cpp  NameEqualsCondition.h  PatronymicEqualsCondition.cpp  PatronymicEqualsCondition.h  SurnameEqualsCondition.cpp  SurnameEqualsCondition.h  TimestampBtwnCondition.cpp  TimestampBtwnCondition.h  TimestampEqualsCondition.cpp  TimestampEqualsCondition.h  VarcharEqualsCondition.cpp  VarcharEqualsCondition.h
